--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ author:
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
   "Machine Learning: Where Algorithms Meet Imagination, and Data Transforms into Wisdom."
+  “机器学习：算法与想象碰撞，数据升华为智慧。”
 
 # Build settings
 
